--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v5
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          outputFile: build/CHANGELOG.md
+          outputFile: CHANGELOG.md
           commitMode: true
 
       - name: Upload to GitHub release
@@ -59,6 +59,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            build/
+            CHANGELOG.md
           prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
-          body_path: build/CHANGELOG.md
+          body_path: CHANGELOG.md
