feat: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
               "template": "#{{CHANGELOG}}",
               "categories": [
                 {
-                  "title": "What's Changed",
+                  "title": "## What's Changed",
                   "label": []
                 }
               ]
