feat: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
 name: CI
 
 on:
-  pull_request:
+  # pull_request:
   push:
     tags: [ "v*" ]
-    branches: [ "master" ]
-  workflow_dispatch:
+    # branches: [ "master" ]
+  # workflow_dispatch:
 
 permissions:
   contents: write
