--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,12 @@ env:
   ARCH: arm64-v8a
 
 jobs:
+  build:
+    uses: ./.github/workflows/build.yaml
+
   test:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -23,7 +27,7 @@ jobs:
       - name: Create file
         run: |
           mkdir -p build
-          sleep 10
+          # sleep 10
           tee build/update.json <<EOF
           {
             "key": "value",
@@ -43,6 +47,7 @@ jobs:
   changelog:
     name: Changelog
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
