--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Create file
         run: |
           mkdir -p build
-          sleep 10
+          sleep 5
           tee build/update.json <<EOF
           {
             "key": "value",
@@ -44,6 +44,7 @@ jobs:
           files: |
             build/*
           prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
+          generate_release_notes: true
 
   changelog:
     name: Changelog
@@ -55,7 +56,7 @@ jobs:
 
       - name:
         run: |
-          sleep 5
+          sleep 10
 
       - name: Build changelog
         uses: mikepenz/release-changelog-builder-action@v5
